# stable-customer-segmentation

./: .env.example  .gitignore  LICENSE  README.md  autoencoder-training-pipeline.py  cluestering-inference-pipeline.py  clustering-inference-pipeline.py  clustering-training-pipeline.py  feature-preparation-pipeline.py  pyproject.toml  requirement.txt  run.bat
artifacts/: autoencoder-model.keras  cluster_insights.csv  feature-scaler.pkl
core/: features.py  logging.py  model.py  utils.py
core/fetch_raw_dataset/: fetch.py
